# voiceio

./: .gitignore  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  config.example.toml  installer.iss  pyproject.toml  voiceio.spec
.github/workflows/: build-windows.yml  ci.yml  publish.yml
scripts/: install_matrix.sh
tests/: conftest.py  record_fixture.py  test_adjudicate.py  test_app_wiring.py  test_audio_quality.py  test_audit.py  test_autocorrect.py  test_autocorrect_state.py  test_backend_probes.py  test_cli.py  test_clipboard_read.py  test_commands.py  test_concurrency_lockdown.py  test_config.py  test_correct_batch.py  test_corrections.py  test_evaluate.py  test_fallback.py  test_health.py  test_hints.py  test_history.py  test_ibus_pending.py  test_ibus_ping.py  test_ibus_typer.py  test_llm.py  test_llm_api.py  test_numbers.py  test_platform.py  test_postcorrect.py  test_postprocess.py  test_prebuffer.py  test_prompt.py  test_recorder_integration.py  test_retention.py  test_robustness.py  test_security_hardening.py  test_snapshots.py  test_streaming.py  test_tokens.py  test_transcriber.py  (+5 more)
tests/fixtures/: natural_sentence.json  repetitive.json
voiceio/: __main__.py  app.py  audit.py  autocorrect.py  autocorrect_state.py  backends.py  cli.py  clipboard_read.py  commands.py  config.py  consent.py  corrections.py  demo.py  evaluate.py  feedback.py  health.py  hints.py  history.py  llm.py  llm_api.py  numbers.py  pidlock.py  platform.py  postcorrect.py  postprocess.py  prompt.py  recorder.py  retention.py  service.py  snapshots.py  streaming.py  tokens.py  transcriber.py  tray.py  typer.py  vad.py  vocab_stats.py  vocabulary.py  wizard.py  wordfreq.py  (+1 more)
voiceio/hotkeys/: __init__.py  base.py  chain.py  evdev.py  pynput_backend.py  socket_backend.py
voiceio/ibus/: __init__.py  engine.py  pending.py
voiceio/tray/: __init__.py  _icons.py  _indicator.py  _pystray.py
voiceio/tts/: __init__.py  base.py  chain.py  edge_engine.py  espeak.py  piper_engine.py  player.py
voiceio/typers/: __init__.py  base.py  chain.py  clipboard.py  ibus.py  pynput_type.py  wtype.py  xdotool.py  ydotool.py
