[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "voiceio"
version = "0.1.0"
description = "Push-to-talk voice-to-text for Linux. Hold a hotkey, speak, release — text appears at your cursor."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Hugo Montenegro" }]
keywords = ["voice", "speech-to-text", "whisper", "linux", "dictation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "faster-whisper>=1.0.0",
    "pynput>=1.7.6",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
tray = ["pystray>=0.19", "Pillow>=10.0"]

[project.scripts]
voiceio = "voiceio.app:main"

[tool.setuptools.packages.find]
include = ["voiceio*"]
